# luka

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
engine/: CMakeLists.txt  context.cc  context.h  engine.cc  engine.h  main.cc
engine/base/gpu/: buffer.cc  buffer.h  gpu.cc  gpu.h  image.cc  image.h
engine/base/task_scheduler/: task_scheduler.cc  task_scheduler.h
engine/base/window/: window.cc  window.h
engine/core/: json.cc  json.h  log.h  math.h  ring.h  util.cc  util.h
engine/editor/editor_input/: editor_input.cc  editor_input.h
engine/editor/editor_ui/: editor_ui.cc  editor_ui.h
engine/editor/input/: editor_input.cc  editor_input.h
engine/editor/scene/: scene.cc  scene.h
engine/editor/ui/: ui.cc  ui.h
engine/function/camera/: camera.cc  camera.h
engine/function/context/: context.cc  context.h
engine/function/function_input/: function_input.cc  function_input.h
engine/function/function_ui/: function_ui.cc  function_ui.h
engine/function/gpu/: buffer.cc  buffer.h  gpu.cc  gpu.h  image.cc  image.h  resource_manager.cc  resource_manager.h
engine/function/input/: input.cc  input.h
engine/function/light/: light.cc  light.h
engine/function/physics/: physics.cc  physics.h
engine/function/rendering/: camera.cc  camera.h  common.cc  common.h  context.cc  context.h  dynamic_buffer.cc  dynamic_buffer.h  dynamic_buffer_ring.cc  dynamic_buffer_ring.h  forward_subpass.cc  forward_subpass.h  frame.cc  frame.h  geometry_subpass.cc  geometry_subpass.h  gpu.cc  gpu.h  instance.cc  instance.h  pass.cc  pass.h  pipeline.cc  pipeline.h  rd_context.cc  rd_context.h  rendering.cc  rendering.h  rendering_old.cc  rendering_old.h  spirv.cc  spirv.h  static_buffer.cc  static_buffer.h  subpass.cc  subpass.h  swapchain_pass.cc  swapchain_pass.h  swapchain_subpass.cc  swapchain_subpass.h  (+4 more)
engine/function/scene_graph/: accessor.cc  accessor.h  buffer.cc  buffer.h  buffer_view.cc  buffer_view.h  camera.cc  camera.h  component.cc  component.h  image.cc  image.h  light.cc  light.h  map.cc  map.h  material.cc  material.h  mesh.cc  mesh.h  node.cc  node.h  sampler.cc  sampler.h  scene.cc  scene.h  scene_graph.cc  scene_graph.h  texture.cc  texture.h
engine/function/scene_graph/component/: component.cc  light.cc  light.h  sampler.cc  sampler.h
engine/function/time/: time.cc  time.h
engine/function/window/: window.cc  window.h
engine/function/world/: world.cc  world.h
engine/platform/: common.h  pch.h
engine/rendering/compute/: compute.cc  compute.h
engine/rendering/framework/: compute_job.cc  compute_job.h  framework.cc  framework.h  pass.cc  pass.h  spirv.cc  spirv.h  subpass.cc  subpass.h
engine/rendering/graphics/: graphics.cc  graphics.h  pass.cc  pass.h  spirv.cc  spirv.h  subpass.cc  subpass.h
engine/resource/asset/: asset.cc  asset.h  frame_graph.cc  frame_graph.h  gltf.cc  gltf.h  image.cc  image.h  light.cc  light.h  model.cc  model.h  scene.cc  scene.h  shader.cc  shader.h  texture.cc  texture.h
engine/resource/asset/scene_component/: accessor.cc  accessor.h  buffer.cc  buffer.h  buffer_view.cc  buffer_view.h  camera.cc  camera.h  component.cc  component.h  image.cc  image.h  light.cc  light.h  map.cc  map.h  material.cc  material.h  mesh.cc  mesh.h  node.cc  node.h  sampler.cc  sampler.h  scene.cc  scene.h  texture.cc  texture.h
engine/resource/config/: config.cc  config.h  root_path.h.in  source_path.h.in
engine/resource/context/: context.cc  context.h
engine/resource/gpu/: buffer.cc  buffer.h  gpu.cc  gpu.h  image.cc
engine/resource/scene_graph/: accessor.cc  accessor.h  buffer.cc  buffer.h  buffer_view.cc  buffer_view.h  camera.cc  camera.h  component.cc  image.cc  image.h  light.cc  light.h  map.cc  map.h  material.cc  material.h  mesh.cc  mesh.h  node.cc  node.h  sampler.cc  sampler.h  scene.cc  scene.h  scene_graph.cc  scene_graph.h  texture.cc  texture.h
engine/resource/task_scheduler/: task_scheduler.cc  task_scheduler.h
engine/resource/time/: time.cc
engine/resource/window/: window.cc  window.h
resource/: CMakeLists.txt
resource/asset/frame_graph/: default.json  deferred.json  simple_deferred.json  simple_forward.json
resource/asset/frame_graph/default/: deferred_rendering.json
resource/asset/light/: punctual_light.json
resource/asset/light/default/: punctual_light.json
resource/asset/shader/base/: shader.frag  shader.vert
resource/asset/shader/common/: common.glsl  edge_detect.comp  geometry.vert  screen.frag  transparency.frag
resource/asset/shader/default/: common.glsl  geometry.frag  geometry.vert  lighting.frag  lighting.vert  transparency.frag  transparency.vert  ui.frag  ui.vert
resource/asset/shader/deferred/: geometry.frag  lighting.vert  ui.frag
resource/asset/shader/glsl/: shader.frag  shader.vert
resource/asset/shader/include/: defination.glsl  get_geometry_attribute.glsl  lighting.glsl
resource/asset/shader/pbr/glsl/: shader.frag
resource/asset/shader/simple_deferred/: geometry.frag  lighting.frag
resource/asset/shader/simple_forward/: opaque.frag
resource/config/: config.json
